Updated Pages pages

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -67,8 +67,7 @@
 
   <button (click)="websites()"
           class="btn btn-primary btn-block"
-          aria-pressed="true"
-          [routerLink]="['/user/:uid/website']">
+          aria-pressed="true">
     Websites
   </button>
   <button (click)="buttonClicked($event)"
