--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand pull-left">
-      <a [routerLink]="['/user/:uid']" class="navbar-link">
+      <a (click)="goToProfile()" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </div>
@@ -25,7 +25,7 @@
 <div class="container-fluid jj-body">
   <div *ngFor="let website of websites">
     <li class="list-group-item">
-      <a [routerLink]="['/user/:uid/website/:wid/page']">
+      <a (click)="goToPages(website._id)">
         {{website.name}}
       </a>
       <a  class="pull-right" [routerLink]="['/user', website.developerId, 'website', website._id]">
@@ -38,7 +38,7 @@
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-brand pull-right">
-      <a (click)="goToProfile()" [routerLink]="['/user/:uid']">
+      <a (click)="goToProfile()">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
