--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-brand pull-left">
-      <a [routerLink]="['/user/:uid/website']" class="navbar-link">
+      <a (click)="goToWebsites()" class="navbar-link">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </div>
@@ -24,7 +24,7 @@
       </a>
     </div>
     <p class="navbar-brand pull-right">
-      <a class="navbar-link" [routerLink]="['/user/:uid/website/:wid/page/new']">
+      <a class="navbar-link" (click)="newPage()">
         <span class="glyphicon glyphicon-plus"></span>
       </a>
     </p>
@@ -32,103 +32,29 @@
 </nav>
 
 <div class="container-fluid jj-body">
-  <!--<div *ngFor="let page of pages">-->
-    <!--<ul class="list-group">-->
-      <!--<li class="list-group-item">-->
-        <!--<div class="row">-->
-          <!--<div class="col-xs-9">-->
-            <!--<a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">-->
-              <!--{{page.name}}-->
-            <!--</a>-->
-          <!--</div>-->
-          <!--<div class="col-xs-3">-->
-            <!--<a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">-->
-              <!--<span class="glyphicon glyphicon-cog"></span>-->
-            <!--</a>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</li>-->
-    <!--</ul>-->
-  <!--</div>-->
-<!--</div>-->
-  <ul class="list-group">
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
-            Blog Post
-          </a>
+  <div *ngFor="let page of pages">
+      <li class="list-group-item">
+        <div class="row">
+          <div class="col-xs-9">
+            <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
+              {{page.name}}
+            </a>
+          </div>
+          <div class="col-xs-3">
+            <a class="pull-right" (click)="editPage(page._id)">
+              <span class="glyphicon glyphicon-cog"></span>
+            </a>
+          </div>
         </div>
-        <div class="col-xs-3">
-          <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
-            Blogs
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
-            Home
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
-            About
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-    <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-9">
-          <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']">
-            Contact Us
-          </a>
-        </div>
-        <div class="col-xs-3">
-          <a class="pull-right" [routerLink]="['/user/:uid/website/:wid/page/:pid']">
-            <span class="glyphicon glyphicon-cog"></span>
-          </a>
-        </div>
-      </div>
-    </li>
-  </ul>
+      </li>
+  </div>
 </div>
+
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-brand pull-right">
-      <a [routerLink]="['/user/:uid']">
+      <a (click)="goToProfile()">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </p>
