Updated widget list

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -70,8 +70,7 @@
           aria-pressed="true">
     Websites
   </button>
-  <button (click)="buttonClicked($event)"
-          class="btn btn-danger btn-block"
+  <button class="btn btn-danger btn-block"
           aria-pressed="true"
           [routerLink]="['/login']">
     Logout
