--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,17 +1,17 @@
-<!--<div *ngFor="let widget of widgets">-->
-  <!--<div [ngSwitch]="widget.type">-->
+<div *ngFor="let widget of widgets">
+  <div [ngSwitch]="widget.widgetType">
 
-    <!--<div *ngSwitchCase='header'>-->
-      <!--<app-widget-header></app-widget-header>-->
-    <!--</div>-->
+    <div *ngSwitchCase="'HEADER'">
+      <app-widget-header></app-widget-header>
+    </div>
 
-    <!--<div *ngSwitchCase='image'>-->
-      <!--<app-widget-image></app-widget-image>-->
-    <!--</div>-->
+    <div *ngSwitchCase="'IMAGE'">
+      <app-widget-image></app-widget-image>
+    </div>
 
-    <!--<div *ngSwitchCase='youtube'>-->
-      <!--<app-widget-youtube></app-widget-youtube>-->
-    <!--</div>-->
+    <div *ngSwitchCase="'YOUTUBE'">
+      <app-widget-youtube></app-widget-youtube>
+    </div>
 
-  <!--</div>-->
-<!--</div>-->
+  </div>
+</div>
