Updates on widget components

--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -5,7 +5,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-brand pull-left">
-        <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-link">
+        <a (click)="goToWidgets()" class="navbar-link">
           <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
       </div>
@@ -20,21 +20,21 @@
   </nav>
   <nav class="jj-widget-chooser-padding">
     <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> Header </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Label </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> HTML </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Text Input </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Link </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Button </a></ul>
     <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> Image </a></ul>
     <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> YouTube </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Data Table </a></ul>
-    <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Repeater </a></ul>
 
+    <ul><a (click)="chooseWidget()"> Label </a></ul>
+    <ul><a (click)="chooseWidget()"> HTML </a></ul>
+    <ul><a (click)="chooseWidget()"> Text Input </a></ul>
+    <ul><a (click)="chooseWidget()"> Link </a></ul>
+    <ul><a (click)="chooseWidget()"> Button </a></ul>
+    <ul><a (click)="chooseWidget()"> Data Table </a></ul>
+    <ul><a (click)="chooseWidget()"> Repeater </a></ul>
   </nav>
   <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
       <p class="navbar-brand pull-right">
-        <a [routerLink]="['/user/:uid']">
+        <a (click)="goToProfile()">
           <span class="glyphicon glyphicon-user"></span>
         </a>
       </p>
