--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -25,38 +25,72 @@
 <div class="container-fluid jj-body">
 
   <div *ngFor="let widget of widgets">
-    <div class="jj-widget">
-      <div class="jj-toolbar">
-        <a (click)="editWidget(widget._id)">
-          <span class="glyphicon glyphicon-cog"></span>
-        </a>
-        <span class="glyphicon glyphicon-menu-hamburger"></span>
-      </div>
-      <div [ngSwitch]="widget.widgetType">
+    <div [ngSwitch]="widget.widgetType">
 
-        <div *ngSwitchCase="'HEADING'">
-          <h1>{{widget.text}}</h1>
+      <div *ngSwitchCase="'HEADING'">
+        <div class="jj-widget">
+          <div class="jj-toolbar">
+            <a (click)="editWidget(widget._id)">
+              <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </div>
+          <div [ngSwitch]="widget.size">
+            <div *ngSwitchCase="1"><h1>{{widget.text}}</h1></div>
+            <div *ngSwitchCase="2"><h2>{{widget.text}}</h2></div>
+            <div *ngSwitchCase="3"><h3>{{widget.text}}</h3></div>
+            <div *ngSwitchCase="4"><h4>{{widget.text}}</h4></div>
+            <div *ngSwitchCase="5"><h5>{{widget.text}}</h5></div>
+            <div *ngSwitchCase="6"><h6>{{widget.text}}</h6></div>
+          </div>
         </div>
+      </div>
 
-        <div *ngSwitchCase="'YOUTUBE'">
-          <iframe [src]="widget.url"
-                  width="560" height="315"
+      <div *ngSwitchCase="'YOUTUBE'">
+        <div class="jj-widget">
+          <div class="jj-toolbar">
+            <a (click)="editWidget(widget._id)">
+              <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </div>
+          <iframe class="jj-content"
+                  [src]="widget.url"
+                  width="{{widget.width}}"
+                  height="315"
                   frameborder="0"
                   allowfullscreen></iframe>
         </div>
+      </div>
 
-        <ng-container *ngSwitchCase="'IMAGE'">
+      <ng-container *ngSwitchCase="'IMAGE'">
+        <div class="jj-widget">
+          <div class="jj-toolbar">
+            <a (click)="editWidget(widget._id)">
+              <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </div>
           <img class="jj-content" src="{{widget.url}}"/>
-        </ng-container>
-        <div *ngSwitchCase="'HTML'">
+        </div>
+      </ng-container>
+      <div *ngSwitchCase="'HTML'">
+        <div class="jj-widget">
+          <div class="jj-toolbar">
+            <a (click)="editWidget(widget._id)">
+              <span class="glyphicon glyphicon-cog"></span>
+            </a>
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </div>
           <a>{{widget.text}}</a>
         </div>
-
       </div>
+
     </div>
   </div>
-
 </div>
+
+
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
