--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -55,7 +55,7 @@
             <span class="glyphicon glyphicon-menu-hamburger"></span>
           </div>
           <iframe class="jj-content"
-                  [src]="widget.url"
+                  [src]="cleanURL(widget.url)"
                   width="{{widget.width}}"
                   height="315"
                   frameborder="0"
