--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -42,41 +42,42 @@
   <div class="row">
     <div class="col-sm-3 hidden-xs">
       <nav class="jj-widget-chooser-padding">
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> Header </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Label </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> HTML </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Text Input </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Link </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Button </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> Image </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/:wgid']"> YouTube </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Data Table </a></ul>
-        <ul><a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget/new']"> Repeater </a></ul>
+        <div *ngFor="let widget of widgets">
+          <!--<app-widget-edit></app-widget-edit>-->
 
+          <div [ngSwitch]="widget.widgetType">
+            <div *ngSwitchCase="'HEADING'">
+              <ul><a (click)="editWidget(widget._id)"> Header</a></ul>
+            </div>
+            <div *ngSwitchCase="'IMAGE'">
+              <ul><a (click)="editWidget(widget._id)"> Image </a></ul>
+            </div>
+            <div *ngSwitchCase="'YOUTUBE'">
+              <ul><a (click)="editWidget(widget._id)"> YouTube </a></ul>
+            </div>
+          </div>
+        </div>
+        <ul><a (click)="chooseWidget()"> Label </a></ul>
+        <ul><a (click)="chooseWidget()"> HTML </a></ul>
+        <ul><a (click)="chooseWidget()"> Text Input </a></ul>
+        <ul><a (click)="chooseWidget()"> Link </a></ul>
+        <ul><a (click)="chooseWidget()"> Button </a></ul>
+        <ul><a (click)="chooseWidget()"> Data Table </a></ul>
+        <ul><a (click)="chooseWidget()"> Repeater </a></ul>
       </nav>
     </div>
     <div class="col-sm-9">
 
       <form>
         <div class="form-group">
-          <label for="Name">
+          <label for="widgetType">
             Name
           </label>
-          <input name="Name"
-                 id="Name"
+          <input [(ngModel)]="widgetType"
+            name="widgetType"
+                 id="widgetType"
                  type="text"
                  class="form-control"/>
-        </div>
-      </form>
-      <form>
-        <div class="form-group">
-          <label for="Text">
-            Text
-          </label>
-          <input
-            name="Text"
-            id="Text"
-            class="form-control"/>
         </div>
       </form>
       <form>
@@ -84,7 +85,7 @@
           <label for="URL">
             URL
           </label>
-          <input
+          <input [(ngModel)]="url"
             type="url"
             placeholder="URL"
             name="URL"
@@ -95,14 +96,14 @@
       </form>
       <form>
         <div class="form-group">
-          <label for="Width">
+          <label for="width">
             Width
           </label>
-          <input
-            name="Width"
-            id="Width"
+          <input [(ngModel)]="width"
+            name="width"
+            id="width"
             class="form-control"
-            type="number"/>
+            type="text"/>
         </div>
       </form>
       <button (click)="goToWidgets()"
