--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,7 +1,7 @@
   <div [ngSwitch]="widget.widgetType">
 
     <div *ngSwitchCase="'HEADING'">
-      <app-w-header></app-w-header>
+      <app-widget-header></app-widget-header>
     </div>
 
     <div *ngSwitchCase="'IMAGE'">
