--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 
-<!--charset="UTF-8"-->
-<!--name="viewport" content="initial-scale=1, user-scalable=no"-->
-<!--New Website-->
-<!--rel="stylesheet" href="../../vendors/bootstrap/dist/css/bootstrap.min.css"-->
-<!--rel="stylesheet" href="../../css/style.css"-->
-<!--src="../../vendors/bootstrap/dist/js/bootstrap.min.js"-->
-
-
 <nav class="navbar navbar-default_blue navbar-fixed-top">
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
@@ -44,7 +36,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a (click)="commit()" class="navbar-link">
+        <a (click)="commit(Name.value, Description.value)" class="navbar-link">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </p>
